# VisionModel

./: derma_agent.sqlite
VisionModel/: .env  .gitignore  main.py  playground.py  pyproject.toml
VisionModel/my_local_lancedb/derma_knowledge.lance/_transactions/: 0-a7ea2019-ee43-4b38-9627-08d6d7b41e34.txn  1-216d53f4-c1ba-41d5-8988-16faa05a7683.txn  2-7123eeb7-fcb8-4ad6-ad8d-bffb8362c67d.txn  3-ec551160-6b95-44b7-a5b2-cf38ce5dd4a7.txn
VisionModel/my_local_lancedb/derma_knowledge.lance/_versions/: 1.manifest  2.manifest  3.manifest  4.manifest
VisionModel/my_local_lancedb/derma_knowledge.lance/data/: b870312b-462d-4c12-b452-98c9de757220.lance  c3d2e8e7-166d-4c39-adb1-b78cd9e6ee24.lance  df3dafa0-51ed-4f23-a113-78d39da52b9d.lance
VisionModel/skin/: skin_knowledge.py
VisionModel/tmp/: agents.db
my_local_lancedb/derma_knowledge.lance/_transactions/: 0-ebd7453a-bbe5-40e4-8a4d-c479967aec38.txn
my_local_lancedb/derma_knowledge.lance/_versions/: 1.manifest
src/visionmodel/: derma_agent.sqlite  playground.py
src/visionmodel/my_local_lancedb/derma_knowledge.lance/_transactions/: 0-fb48a126-a4b2-43e2-908d-6adddfa074a5.txn
src/visionmodel/my_local_lancedb/derma_knowledge.lance/_versions/: 1.manifest
src/visionmodel/tmp/: agents.db
tmp/: agents.db
